# udemy_business_etl

./: .gitignore  README.md  extract.py  pipeline.py  pyproject.toml  requirements.txt
model/0_bronze/: translation_cache.json
src/: auth.py  extract.py  load.py  mapa_idioma.py  scrap.py  scrap_update.py  transform.py  translate.py
