[project]
name = "udemy-business-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "Edy Epumuceno Rodrigues Junior",email = "edyjrdev@gmail.com"}
]
requires-python = "3.13.3"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "curl-cffi (>=0.14.0,<0.15.0)",
    "deep-translator (>=1.11.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
